[package]
name = "rtlf"
version = "0.0.0"
edition = "2021"

[lib]
name = "rtlf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-polars = { version = "0.25", features = ["lazy", "derive"] }

polars-buffer = { version = "0.52", default-features=false }
polars-core = { version = "0.52", default-features=false, features = ["dtype-struct"] }
polars-io = { version = "0.52", default-features=false, features = ["parquet"] }
polars-plan = { version = "0.52", features = ["serde", "dtype-struct"] }
polars-expr = { version = "0.52", default-features=false, features = ["dtype-struct"] }
polars-mem-engine = { version = "0.52", default-features=false }
polars-utils = { version = "0.52", default-features=false }
polars-lazy = { version = "0.52", default-features=false, features = ["cse", "parquet"] }
polars-ffi = { version = "0.52", default-features = false }

[patch.crates-io]
polars = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-arrow = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-buffer = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-compute = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-core = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-dtype = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-error = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-expr = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-ffi = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-io = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-lazy = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-mem-engine = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-ops = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-parquet = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-plan = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-row = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-schema = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-stream = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-time = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
polars-utils = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }
pyo3-polars = { git = "https://github.com/pola-rs/polars", tag = "py-1.38.1" }

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
