[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rtlf"
version = "0.1.0"
description = "Polars extension in Rust"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["polars>=0.46"]

[tool.maturin]
# The Rust extension module is placed inside the Python package directory.
# Python source lives under python/ so maturin knows where to find it.
python-source = "python"
module-name = "rtlf.rtlf"
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "maturin>=1.7",
    "pytest>=8",
]
