[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rtlf"
version = "0.1.0"
description = "Polars extension in Rust"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars==1.38.1",
]

[tool.maturin]
# The Rust extension module is placed inside the Python package directory.
# Python source lives under python/ so maturin knows where to find it.
python-source = "python"
module-name = "rtlf.rtlf"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.7",
    "mypy>=1.0",
    "pytest>=8",
]

